# outfocuscli

./: .gitignore  README.md  pyproject.toml
src/outfocuscli/: cli.py  client.py  config.py  repl.py  spinner_messages.py
