[project]
name = "outfocuscli"
version = "0.1.0"
description = ""
authors = [
    {name = "Yuri Melo",email = "yurifullstack@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "typer (>=0.21.1,<0.22.0)"
]

[tool.poetry]
packages = [{include = "outfocuscli", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
